# phoneme-aware-multilingual-asr-with-adaptive-layer-fusion

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
results/: default_training_results.json  results.json
scripts/: evaluate.py  predict.py  train.py
src/phoneme_aware_multilingual_asr_with_adaptive_layer_fusion/: __init__.py
src/phoneme_aware_multilingual_asr_with_adaptive_layer_fusion/data/: __init__.py  loader.py  preprocessing.py
src/phoneme_aware_multilingual_asr_with_adaptive_layer_fusion/evaluation/: __init__.py  analysis.py  metrics.py
src/phoneme_aware_multilingual_asr_with_adaptive_layer_fusion/models/: __init__.py  components.py  model.py
src/phoneme_aware_multilingual_asr_with_adaptive_layer_fusion/training/: __init__.py  trainer.py
src/phoneme_aware_multilingual_asr_with_adaptive_layer_fusion/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
